@@ -1,3 +1,7 @@
+2008-04-01  Johnny Jacob  <jjohnny@novell.com>
+
+	* Camel.cs: Type cast. Fixes compile error.
+
 2008-03-19  Sankar P  <psankar@novell.com>
 
 	* mono-plugin.c: (epm_invoke),
